kubernetes/ohos/ingress/es_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ohos-ingress-es
  namespace: tna-ohos
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName:  tna-ohos
  rules:
    - host: a08001c6c1d2e4c58bdf02589da33fca-0f850b505f873e8e.elb.eu-west-2.amazonaws.com
      http:
        paths:
          - path: /es
            pathType: Prefix
            backend:
              service:
                name: ciim-internal-tna-es-http
                port:
                  number: 9200
          - path: /public
            pathType: Prefix
            backend:
              service:
                name: ciim-public-tna-es-http
                port:
                  number: 9200
          - path: /clean
            pathType: Prefix
            backend:
              service:
                name: ciim-public-clean-tna-es-http
                port:
                  number: 9200
