kubernetes/ohos/ingress/rosetta_3_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ohos-ingress-rosetta-3
  namespace: tna-ohos
spec:
  ingressClassName: tna-ohos
  rules:
      http:
        paths:
          - path: /rosetta-3
            pathType: Prefix
            backend:
              service:
                name: rosetta-3-service
                port:
                  name: rosetta-port
